rename to #Script

--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -539,7 +539,7 @@ The primary difference between the .NET Core and .NET Framework project template
 
 ## New .NET Core 2.0 and .NET Framework Project Templates!
  
-Now that ServiceStack v5 has merged into a single unified set of NuGet packages that's consolidated around .NET Standard 2.0, we've developed **11 new .NET Core 2.0 project templates** for each of ServiceStack's most popular starting templates. Each .NET Core 2.0 template has an equivalent .NET Framework template except for [ServiceStack's Templates WebApp](http://templates.servicestack.net/docs/web-apps) which is itslef a pre-built .NET Core 2.0 App that lets you develop Web Applications and HTTP APIs on-the-fly without any compilation.
+Now that ServiceStack v5 has merged into a single unified set of NuGet packages that's consolidated around .NET Standard 2.0, we've developed **11 new .NET Core 2.0 project templates** for each of ServiceStack's most popular starting templates. Each .NET Core 2.0 template has an equivalent .NET Framework template except for [ServiceStack's Sharp Apps](https://sharpscript.net/docs/sharp-apps) which is itself a pre-built .NET Core 2.0 App that lets you develop Web Applications and HTTP APIs on-the-fly without any compilation.
 
 All .NET Core 2.0 Templates can be developed using your preferred choice of either VS Code, VS.NET or JetBrains Project Rider on your preferred Desktop OS. Given the diverse ecosystem used to develop .NET Core Applications, the new Project Templates are being maintained on GitHub and made available via our new [dotnet-new](/dotnet-new) command-line utility, installable from npm with:
  
@@ -653,11 +653,11 @@ The Webpack templates have been updated to utilize [Webpack's DllPlugin](https:/
  
     $ npm run dev
 
-Which will watch and re-compile your App for any changes. These new templates also include a new hot-reload feature which works similar to [ServiceStack Templates hot-reloading](http://templates.servicestack.net/docs/hot-reloading) where in **DebugMode** it will long poll the server to watch for any modified files in `/wwwroot` and automatically refresh the page. This provides a hot-reload alternative to `npm run dev-server` to run a Webpack Dev Server proxy on port http://localhost:3000 
+Which will watch and re-compile your App for any changes. These new templates also include a new hot-reload feature which works similar to [Sharp Pages hot-reloading](https://sharpscript.net/docs/hot-reloading) where in **DebugMode** it will long poll the server to watch for any modified files in `/wwwroot` and automatically refresh the page. This provides a hot-reload alternative to `npm run dev-server` to run a Webpack Dev Server proxy on port http://localhost:3000 
 
-### Configured with ServiceStack Templates
+### Configured with `#Script`
  
-Hot Reloading works by leveraging [ServiceStack Templates](http://templates.servicestack.net) which works seamlessly with Webpack's generated `index.html` where it evaluates server Template Expressions when returning the SPA home page. This is leveraged to enable Hot Reloading support by [including the expression](https://github.com/NetCoreTemplates/vue-spa/blob/0c13183b6a5ae20564f650e50d29b9d4e36cbd0c/MyApp/index.template.ejs#L8):
+Hot Reloading works by leveraging [#Script](https://sharpscript.net) which works seamlessly with Webpack's generated `index.html` where it evaluates server Template Expressions when returning the SPA home page. This is leveraged to enable Hot Reloading support by [including the expression](https://github.com/NetCoreTemplates/vue-spa/blob/0c13183b6a5ae20564f650e50d29b9d4e36cbd0c/MyApp/index.template.ejs#L8):
 
 ```html
 {% raw %}{{ ifDebug | select: <script>{ '/js/hot-fileloader.js' | includeFile }</script> }}{% endraw %}
@@ -665,7 +665,7 @@ Hot Reloading works by leveraging [ServiceStack Templates](http://templates.serv
 
 Which renders the contents of [/js/hot-fileloader.js](https://github.com/ServiceStack/ServiceStack/blob/master/src/ServiceStack/js/hot-fileloader.js) when running the Web App during development.
 
-Although optional, ServiceStack Templates is useful whenever you need to render any server logic in the SPA home page, e.g:
+Although optional, `#Script` is useful whenever you need to render any server logic in the SPA home page, e.g:
 
 ```html 
 {% raw %}<div>Copyright &copy; {{ now | dateFormat('yyyy') }}</div>{% endraw %}
@@ -681,7 +681,7 @@ When your App is ready to deploy, run the `publish` npm (or Gulp) script to pack
 
     npm run publish
  
-Which generates a production Webpack client build and `dotnet publish` release Server build to package your App ready for an XCOPY, rsync or MSDeploy deployment. We used [rsync and supervisord to deploy](http://templates.servicestack.net/docs/deploying-web-apps) each packaged Web template to our Ubuntu Server at the following URL:
+Which generates a production Webpack client build and `dotnet publish` release Server build to package your App ready for an XCOPY, rsync or MSDeploy deployment. We used [rsync and supervisord to deploy](https://sharpscript.net/docs/deploying-sharp-apps) each packaged Web template to our Ubuntu Server at the following URL:
 
     http://<template-name>.web-templates.io
 
@@ -726,9 +726,9 @@ The `mvc` template differentiates the most between .NET Core and ASP.NET version
 
 The `razor` Template is configured to develop Websites using [ServiceStack.Razor](http://razor.servicestack.net) for developing server-generated Websites using Razor without MVC Controllers which lets you create Content Razor Pages that can be called directly or View Pages for generating HTML Views for existing Services. The source code for .NET Core and ASP.NET Framework projects are nearly identical despite being completely different implementations with the .NET Core version being retrofitted on top of .NET Core MVC Views. Use `razor` templates if you like Razor and prefer the [API First Development model](/releases/v4.5.14#end-user-language-with-low-roi) or plan on developing Websites for both .NET Core and ASP.NET and would like to be easily able to migrate between them.
 
-#### ServiceStack Templates
+#### `#Script`
 
-The `templates` Project Template is configured to develop Websites using [ServiceStack Templates](http://templates.servicestack.net), a simpler and cleaner alternative to Razor that lets you utilize simple Template Expressions for evaluating Server logic in `.html` pages. Templates doesn't require any precompilation, is easier to learn and more intuitive for non-programmers that's more suitable for a [number of use-cases](http://templates.servicestack.net/usecases/). Use templates if you want an [alternative to Razor](/releases/v4.5.14#why-templates) syntax and the heavy machinery required to support it.
+The `sharp` Project Template is configured to develop Websites using [#Script](https://sharpscript.net), a simpler and cleaner alternative to Razor that lets you utilize simple Template Expressions for evaluating Server logic in `.html` pages. Templates doesn't require any precompilation, is easier to learn and more intuitive for non-programmers that's more suitable for a [number of use-cases](https://sharpscript.net/usecases/). Use templates if you want an [alternative to Razor](/releases/v4.5.14#why-templates) syntax and the heavy machinery required to support it.
 
 #### Hot Reloading
 
@@ -759,12 +759,12 @@ Both `razor` and `templates` project enjoy Hot Reloading where in development a 
     </td>
 </tr>
 <tr>
-    <td><a href="https://github.com/NetCoreTemplates/templates">templates</a></td>
-    <td><a href="https://github.com/NetFrameworkTemplates/templates-netfx">templates-netfx</a></td>
+    <td><a href="https://github.com/NetCoreTemplates/sharp">templates</a></td>
+    <td><a href="https://github.com/NetFrameworkTemplates/sharp-netfx">sharp-netfx</a></td>
     <td align="center">
-        <h3>ServiceStack Templates Bootstrap Template</h3>
-        <a href="http://templates.web-templates.io"><img src="https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/templates.png" width="500" /></a>
-        <p><a href="http://templates.web-templates.io">templates.web-templates.io</a></p>
+        <h3>Sharp Pages Bootstrap Template</h3>
+        <a href="http://sharp.web-templates.io"><img src="https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/sharp.png" width="500" /></a>
+        <p><a href="http://sharp.web-templates.io">sharp.web-templates.io</a></p>
     </td>
 </tr>
 </table>
@@ -801,23 +801,23 @@ Those who prefer starting from an Empty slate can use the `web` template to crea
 
 ### .NET Core 2.0 ServiceStack WebApp Template
 
-The only .NET Core 2.0 project template not to have a .NET Framework equivalent is [templates-webapp](https://github.com/NetCoreTemplates/templates-webapp) as it's a pre-built .NET Core 2.0 App that dramatically simplifies .NET Wep App development by enabling Websites and APIs to be developed instantly without compilation.
+The only .NET Core 2.0 project template not to have a .NET Framework equivalent is [sharp-webapp](https://github.com/NetCoreTemplates/sharp-webapp) as it's a pre-built .NET Core 2.0 App that dramatically simplifies .NET Wep App development by enabling Websites and APIs to be developed instantly without compilation.
 
 <table class="table">
 <tr>
     <th>.NET Core 2.0</th>
-    <th>ServiceStack Templates WebApp</th>
+    <th>Sharp Apps</th>
 </tr>
 <tr>
-    <td><a href="https://github.com/NetCoreTemplates/templates-webapp">templates-webapp</a></td>
+    <td><a href="https://github.com/NetCoreTemplates/sharp-webapp">sharp-webapp</a></td>
     <td align="center">
-        <a href="http://rockwind-webapp.web-templates.io/"><img src="https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/templates-webapp.png" width="500" /></a>
-        <p><a href="http://rockwind-webapp.web-templates.io/">templates-webapp.web-templates.io</a></p>
+        <a href="http://rockwind-webapp.web-templates.io/"><img src="https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/sharp-webapp.png" width="500" /></a>
+        <p><a href="http://rockwind-webapp.web-templates.io/">sharp-webapp.web-templates.io</a></p>
     </td>
 </tr>
 </table>
 
-See [templates.servicestack.net/docs/web-apps](http://templates.servicestack.net/docs/web-apps) to learn the different use-cases made possible with Web Apps.
+See [sharpscript.net/docs/sharp-apps](https://sharpscript.net/docs/sharp-apps) to learn the different use-cases made possible with Web Apps.
 
 ### .NET Framework Templates
 
@@ -871,7 +871,7 @@ The smaller footprint required by the `aspnetcore` runtime reduced the footprint
 
 ### ServiceStack WebApps Updated
 
-Likewise all [.NET Core ServiceStack WebApps](https://github.com/NetCoreWebApps) including the pre-built [/web](https://github.com/ServiceStack/Web) binaries have been updated to use ServiceStack v5.
+Likewise all [.NET Core ServiceStack WebApps](https://github.com/sharp-apps) including the pre-built [/web](https://github.com/ServiceStack/Web) binaries have been updated to use ServiceStack v5.
 
 Changes from the previous version includes switching to use the default `WebHost.CreateDefaultBuilder()` builder to bootstrap WebApp's letting you use `ASPNETCORE_URLS` to specify which URL and port to bind on, simplifying deployment configurations.
 
@@ -1219,9 +1219,9 @@ Which you could use to provide a tailored feed for specific clients:
 public class CustomFeedView { ... }
 ```
 
-### ServiceStack Templates View Pages
+### Sharp Pages
 
-[ServiceStack Templates](http://templates.servicestack.net) gains support for the last missing feature from ServiceStack.Razor with its new **View Pages** support which lets you use `.html` Template Pages to render the HTML for Services Responses. 
+[Sharp Pages](https://sharpscript.net/docs/sharp-pages) gains support for the last missing feature from ServiceStack.Razor with its new **View Pages** support which lets you use `.html` Template Pages to render the HTML for Services Responses. 
 
 It works similarly to Razor ViewPages where it uses first matching View Page with the Response DTO is injected as the `Model` property. The View Pages can be in any folder within the `/Views` folder using the format `{PageName}.html` where `PageName` can be either the **Request DTO** or **Response DTO** Name, but all page names within the `/Views` folder need to be unique.
 
@@ -1363,9 +1363,9 @@ The MVC HTML Helpers for ASP.NET ServiceStack.Razor has been moved to the **Serv
 
 [Markdown Razor](/markdown-razor) and its `MarkdownFormat` was also moved to ServiceStack.Razor as they were built on older Code DOM technology which isn't available on .NET Core and saw its feature-set stripped down to bare Markdown functionality.
 
-#### ServiceStack Templates
+#### Sharp Pages
 
-If you were using Markdown Razor we recommend using the superior, cleaner, faster and more flexible alternative in [ServiceStack Templates](http://templates.servicestack.net/) which easily supports Markdown Razor's most redeeming feature of being able to mix .NET in Markdown by utilizing its [Transformers](http://templates.servicestack.net/docs/transformers) feature.
+If you were using Markdown Razor we recommend using the superior, cleaner, faster and more flexible alternative in [Sharp Pages](https://sharpscript.net/docs/sharp-pages) which easily supports Markdown Razor's most redeeming feature of being able to mix .NET in Markdown by utilizing its [Transformers](https://sharpscript.net/docs/transformers) feature.
 
 #### Markdown Config
 
