--- a/docs/_releases/v5.1.0.md
+++ b/docs/_releases/v5.1.0.md
@@ -759,7 +759,7 @@ A new version of the [Kotlin ServiceStack Client](/kotlin-add-servicestack-refer
 
 ## New Single Page App Templates!
 
-We're continually on the lookout to provide great integration with the most productive and innovative technology stacks for developing sophisticated Web Apps. For most of the .NET ecosystem this typically means using Razor to develop server-generated HTML Websites. But Razor is rarely our preferred choice, in cases where we'd want to develop server-generated websites (e.g. for Content Heavy websites) we'll prefer to use the much simpler and dependency/tooling free [ServiceStack Templates](http://templates.servicestack.net/) whilst for the development of more complex and interactive Applications we prefer to leverage one of the popular SPA JavaScript Frameworks as it's where most of the innovation in front-end Web Development is happening. 
+We're continually on the lookout to provide great integration with the most productive and innovative technology stacks for developing sophisticated Web Apps. For most of the .NET ecosystem this typically means using Razor to develop server-generated HTML Websites. But Razor is rarely our preferred choice, in cases where we'd want to develop server-generated websites (e.g. for Content Heavy websites) we'll prefer to use the much simpler and dependency/tooling free [#Script](https://sharpscript.net) whilst for the development of more complex and interactive Applications we prefer to leverage one of the popular SPA JavaScript Frameworks as it's where most of the innovation in front-end Web Development is happening. 
 
 In addition to their thriving ecosystems and superior tooling, adopting a Single Page App Framework enables an [API First Development model](/why-not-razor#end-user-language-with-low-roi) where you'll be able to develop the same set of APIs to serve all Web, Mobile and Desktop Apps. In our ever-increasing mobile world this trait is becoming more valuable with each passing year. Consolidating server functionality for powering all Apps behind a single set of APIs reduces the maintenance and development burden whilst being able to deploy new system features that are immediately accessible to each App. 
 
@@ -1030,7 +1030,7 @@ An important part of improving ServiceStack's usability is to [routinely create 
 
 ### Deployments
 
-One of the reasons we love .NET Core is being able to leverage the rich simple tooling in the Linux ecosystem which is also available from inside Windows via [Windows Subsystem for Linux](https://docs.microsoft.com/en-us/windows/wsl/install-win10). After a [one-time setup of configuring nginx and supervisord](http://templates.servicestack.net/docs/deploying-web-apps#deploying-multiple-web-apps-to-ubuntu) our deployments are reduced down to:
+One of the reasons we love .NET Core is being able to leverage the rich simple tooling in the Linux ecosystem which is also available from inside Windows via [Windows Subsystem for Linux](https://docs.microsoft.com/en-us/windows/wsl/install-win10). After a [one-time setup of configuring nginx and supervisord](https://sharpscript.net/docs/deploying-sharp-apps#deploying-multiple-web-apps-to-ubuntu) our deployments are reduced down to:
 
     $ npm run deploy
 
@@ -1469,7 +1469,7 @@ The creation of Email Template is split into different steps to ensure all users
 Each template follows the same approach:
 
  - Work out all users the email should be sent to 
- - Retrieve all data required by the template and inject it into a new [ServiceStack Templates Context](http://templates.servicestack.net/docs/installation) 
+ - Retrieve all data required by the template and inject it into a new [ServiceStack ScriptContext](https://sharpscript.net/docs/installation) 
  - Use the context to render the specified [email template](https://github.com/NetCoreApps/TechStacks/tree/master/src/TechStacks/emails). 
  
  In this case it renders the [post-new.html](https://github.com/NetCoreApps/TechStacks/blob/master/src/TechStacks/emails/post-new.html) Template inside the [_layout.html](https://github.com/NetCoreApps/TechStacks/blob/master/src/TechStacks/emails/_layout.html) - which is based on the [Email Bootstrap Template](https://github.com/seanpowell/Email-Boilerplate/blob/master/email_commentsremoved.html) and used as the layout for all email templates.
@@ -1898,7 +1898,7 @@ public class Callback : IReturn<CallbackResponse>
 }
 ```
 
-ServiceStack `object` properties are now deserialized using ServiceStack Templates [JS Utils](/js-utils) which can parse any JavaScript or JSON data structure. So if a POST callback was sent to the above service containing: 
+ServiceStack `object` properties are now deserialized using `#Script` [JS Utils](/js-utils) which can parse any JavaScript or JSON data structure. So if a POST callback was sent to the above service containing: 
 
 ```
 POST /callback
@@ -2178,7 +2178,7 @@ To quickly view and experiment with OrmLite's different Schema features we've ad
 
 ## .NET Core Extensibility in WebApps
 
-[Web Apps](http://templates.servicestack.net/docs/web-apps) is our solution for rapidly developing .NET Core Web Apps in real-time, without compilation. It's especially useful when you have a number of similar Web Apps that need to share an approved suite of curated functionality which you can make available as a plugin or set of filters and drop the compiled `.dll` into a `/plugins` folder. It simplifies updates as all Web Apps are running the same binaries and the late-binding nature of [ServiceStack Templates](http://templates.servicestack.net) ensures there's no binary coupling or dependency upgrade issues. [Deployments are also simplified](http://templates.servicestack.net/docs/deploying-web-apps#using-travis-ci-to-deploy-using-docker-to-aws-ecs) since Apps only need to be copied to the remote server and not built.
+[Web Apps](https://sharpscript.net/docs/sharp-apps) is our solution for rapidly developing .NET Core Web Apps in real-time, without compilation. It's especially useful when you have a number of similar Web Apps that need to share an approved suite of curated functionality which you can make available as a plugin or set of filters and drop the compiled `.dll` into a `/plugins` folder. It simplifies updates as all Web Apps are running the same binaries and the late-binding nature of [#Script](https://sharpscript.net) ensures there's no binary coupling or dependency upgrade issues. [Deployments are also simplified](https://sharpscript.net/docs/deploying-sharp-apps#using-travis-ci-to-deploy-using-docker-to-aws-ecs) since Apps only need to be copied to the remote server and not built.
 
 We've further improved the extensibility of Plugins which can now implement .NET Core's `IStartup` to be able to register any required dependencies without any coupling to any Custom AppHost.
 
