--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -78,11 +78,11 @@ The app tool also makes it easy to install .NET Core Apps where you can `list` a
 
     $ app list
 
-By default this will list all [NetCoreWebApps](https://github.com/NetCoreWebApps) available, ordered by popularity:
+By default this will list all [NetCoreWebApps](https://github.com/sharp-apps) available, ordered by popularity:
 
 ```
    1. redis           Redis Admin Viewer developed as Vue Client Single Page App
-   2. bare            Bootstrap + jQuery multi-page Website with dynamic Menu Navigation + API pages
+   2. bare            Bootstrap + jQuery multi-page Website with dynamic Menu Navigation + Sharp APIs
    3. chat            Highly extensible App with custom AppHost leveraging OAuth + SSE for real-time Chat
    4. plugins         Extend WebApps with Plugins, Filters, ServiceStack Services and other C# extensions
    5. blog            Minimal multi-user Twitter OAuth blogging platform that creates living powerful pages
@@ -113,19 +113,19 @@ NetCoreTemplates:
    7. react-spa         .NET Core 2.1 React Create App CLI Bootstrap App
    8. angular-lite-spa  .NET Core 2.1 Angular 4 Material Design Lite Webpack App
    9. web               .NET Core 2.1 Empty Website
-  10. rockwind-webapp   .NET Core 2.1 Rockwind Templates WebApp
+  10. rockwind-webapp   .NET Core 2.1 Rockwind Sharp Apps
   11. selfhost          .NET Core 2.1 self-hosting Console App
   12. mvc               .NET Core 2.1 MVC Website
   13. templates         .NET Core 2.1 Templates Bootstrap Website
   14. razor             .NET Core 2.1 Website with ServiceStack.Razor
   15. parcel            .NET Core 2.1 Parcel TypeScript App
-  16. parcel-webapp     .NET Core 2.1 Parcel Templates WebApp
-  17. bare-webapp       .NET Core 2.1 Bare Templates WebApp
+  16. parcel-webapp     .NET Core 2.1 Parcel Sharp Apps
+  17. bare-webapp       .NET Core 2.1 Bare Sharp Apps
 
 NetCoreWebApps:
 
    1. redis           Redis Admin Viewer developed as Vue Client Single Page App
-   2. bare            Bootstrap + jQuery multi-page Website with dynamic Menu Navigation + API pages
+   2. bare            Bootstrap + jQuery multi-page Website with dynamic Menu Navigation + Sharp APIs
    3. chat            Highly extensible App with custom AppHost leveraging OAuth + SSE for real-time Chat
    4. plugins         Extend WebApps with Plugins, Filters, ServiceStack Services and other C# extensions
    5. blog            Minimal multi-user Twitter OAuth blogging platform that creates living powerful pages
@@ -276,14 +276,14 @@ by using the same tested Chrome rendering engine to run your App, mitigating any
 ## Desktop Web Apps
 
 Whilst `app` is useful for running any Windows .NET Core Desktop App, it provides the greatest value for running 
-[ServiceStack .NET Core Web Apps](http://templates.servicestack.net/docs/web-apps) - a revolutionary new simplified development model 
+[ServiceStack .NET Core Web Apps](https://sharpscript.net/docs/sharp-apps) - a revolutionary new simplified development model 
 for developing .NET Core Apps which eliminates much of the friction .NET developers have historically had to face. Web Apps require no 
 builds/compilation, wait times, complicated build tooling, configuration, incompatible dependencies, dev tools or IDE's. 
 
 The simplicity of being able to use the same executable for running all Web Apps allows us more flexibility to provide even greater 
 value-added functionality than what's otherwise possible. By contrast Web Apps can be developed with any text editor in an iterative, 
 live-development environment that updates itself on save, whilst the App is running. It utilizes a familiar 
-[JavaScript and Handlebars syntax](http://templates.servicestack.net) in a high-level dynamic language that late-binds to .NET APIs using 
+[JavaScript and Handlebars syntax](https://sharpscript.net) in a high-level dynamic language that late-binds to .NET APIs using 
 Compiled Expressions for avoiding runtime reflection.
 
 Web Apps are highly customizable by nature as they're delivered and run in source code form, requires no external dependencies or dev tools as they 
@@ -292,7 +292,7 @@ contains the shared binaries that all Web Apps use - making them easier to deplo
 
 ### Installing Web Apps
 
-As [NetCoreWebApps](https://github.com/NetCoreWebApps/spirals) is the default `APP_SOURCE`, running:
+As [NetCoreWebApps](https://github.com/sharp-apps/spirals) is the default `APP_SOURCE`, running:
 
     $ app list
 
@@ -300,7 +300,7 @@ Will return the list of publicly available Web Apps:
 
 ```
    1. redis           Redis Admin Viewer developed as Vue Client Single Page App
-   2. bare            Bootstrap + jQuery multi-page Website with dynamic Menu Navigation + API pages
+   2. bare            Bootstrap + jQuery multi-page Website with dynamic Menu Navigation + Sharp APIs
    3. chat            Highly extensible App with custom AppHost leveraging OAuth + SSE for real-time Chat
    4. plugins         Extend WebApps with Plugins, Filters, ServiceStack Services and other C# extensions
    5. blog            Minimal multi-user Twitter OAuth blogging platform that creates living powerful pages
@@ -321,7 +321,7 @@ We've also made it easy to list your App in the App gallery, by running:
 
 Which opens the [Web App Gallery Gist](https://gist.github.com/gistlyn/f555677c98fb235dccadcf6d87b9d098) where you can request for your Web App
 to be listed in the gallery by commenting on the gist with a link to your project. We'll review it and if it's acceptable we'll fork it in 
-[NetCoreWebApps](https://github.com/NetCoreWebApps) which creates a "link" to your project where it will be automatically listed. 
+[NetCoreWebApps](https://github.com/sharp-apps) which creates a "link" to your project where it will be automatically listed. 
 
 All existing `app` installs will be immediately able to install your App, which either installs the latest published release or from **master** if it 
 hasn't published any releases.
@@ -357,7 +357,7 @@ Running the **blog** App for the first time will create a new `blog.sqlite` data
 Despite it's small `36kb` size it [packs a punch](http://blog.web-app.io/#blog-app-features): 
 
  - Multi User Blogging Platform - Authenticated with Twitter
- - Rich Dynamic Content - Each post can contain the same [powerful language](http://templates.servicestack.net) used to build the app
+ - Rich Dynamic Content - Each post can contain the same [powerful language](https://sharpscript.net) used to build the app
  - Rich Markdown Editor
  - Auto saved drafts
  - Live Previews - showing rendered content as you type
@@ -372,7 +372,7 @@ From SQLite powered blog, lets install something entirely different - a Redis Ad
     $ app install redis
 
 The `redis` app includes some additional customizations which controls how the App looks and behaves when run as a Desktop App in its 
-[app.settings](https://github.com/NetCoreWebApps/redis/blob/master/app.settings):
+[app.settings](https://github.com/sharp-apps/redis/blob/master/app.settings):
 
     debug true
     name Redis Web App
@@ -407,7 +407,7 @@ To run the production version of our app we can either set `debug false` in the 
 
     $ app -r
 
-This flag changes whether to use `vue.js` or `vue.min.js` in the [_layout.html](https://github.com/NetCoreWebApps/redis/blob/master/_layout.html) page:
+This flag changes whether to use `vue.js` or `vue.min.js` in the [_layout.html](https://github.com/sharp-apps/redis/blob/master/_layout.html) page:
 
 ```html
 {% raw %}<script src="../assets/js/vue{{ '.min' | if(!debug) }}.js"></script>{% endraw %}
@@ -428,11 +428,11 @@ The `redis` App has all the features you'd expect from a Redis Admin UI:
   - Breadcrumbs
   - Deep Linking + Browser Navigation (ALT+LEFT Back, ALT+RIGHT Forward, F5 Refresh)
 
-What differs this from other Redis Admin UI's is its terse implementation where its entire custom UI is contained within a single [index.html](https://github.com/NetCoreWebApps/redis/blob/master/index.html) page thanks to the expressiveness of both Vue and ServiceStack Templates.
+What differs this from other Redis Admin UI's is its terse implementation where its entire custom UI is contained within a single [index.html](https://github.com/sharp-apps/redis/blob/master/index.html) page thanks to the expressiveness of both Vue and #Script.
 
 Its minimal size makes it easy for curious and advanced Users to customize and add features since they can make them locally and see their changes 
 in real-time. Its simpler implementation makes contributions easier as they only have 1 page to edit and can paste their changes directly using 
-[GitHub's Edit UI](https://github.com/NetCoreWebApps/redis/edit/master/index.html) to easily create a pull-request where it can be reviewed and merged.
+[GitHub's Edit UI](https://github.com/sharp-apps/redis/edit/master/index.html) to easily create a pull-request where it can be reviewed and merged.
 
 ### Simple Updates
 
@@ -453,7 +453,7 @@ For this example we'll create a small App that leverages one of the advanced Web
     $ md spirals
     $ cd spirals && app init
 
-We could have started from one of the [more complete Web App Templates](http://templates.servicestack.net/docs/web-apps#getting-started) but this gives
+We could have started from one of the [more complete Web App Templates](https://sharpscript.net/docs/sharp-apps#getting-started) but this gives
 us a minimal App generated from [this gist](https://gist.github.com/gistlyn/5c9ee9031e53cd8f85bd0e14881ddaa8).
 
 Now let's open the folder up for editing in our preferred text editor, VS Code:
@@ -841,7 +841,7 @@ This publishing option includes a self-contained .NET Core with all `app` binari
 ### Publish to the world
 
 To maximize reach and accessibility of your App leave a comment on the [App Gallery](https://gist.github.com/gistlyn/f555677c98fb235dccadcf6d87b9d098)
-where after we link to it on [NetCoreWebApps](https://github.com/NetCoreWebApps) it will available to all users when they look for available apps in:
+where after we link to it on [NetCoreWebApps](https://github.com/sharp-apps) it will available to all users when they look for available apps in:
 
     $ app list
 
@@ -855,7 +855,7 @@ A beautiful feature of Web Apps is that they can be enhanced and customized in r
 or knowledge of .NET and C# is required, anyone can simply use any text editor to peek inside `.html` files to see how it works and see any of their
 customizations visible in real-time. 
 
-Apps can be customized using both the JavaScript-like [Templates language](http://templates.servicestack.net) syntax for any "server" HTML generation
+Apps can be customized using both the JavaScript-like [#Script language](https://sharpscript.net) syntax for any "server" HTML generation
 which can be further customized by any JavaScript on the client.
 
 We'd loved to see this aspect of Web Apps utilized as we believe it creates an enjoyable environment that's an easy introduction for curious people 
@@ -865,9 +865,9 @@ App that students can have fun experimenting with and complete.
 ### Advanced Web Apps
 
 Another capability not obvious in Web Apps is that they're highly extensible as you're not limited to just using the 
-[built-in methods](http://templates.servicestack.net/docs/filters-reference) and can easily extend the language with your own custom
-[blocks](http://templates.servicestack.net/docs/blocks) and [filters](http://templates.servicestack.net/docs/filters) to be able to call any 
-.NET method via [Plugins](http://templates.servicestack.net/docs/web-apps#plugins).
+[built-in methods](https://sharpscript.net/docs/filters-reference) and can easily extend the language with your own custom
+[blocks](https://sharpscript.net/docs/blocks) and [methods](https://sharpscript.net/docs/methods) to be able to call any 
+.NET method via [Plugins](https://sharpscript.net/docs/sharp-apps#plugins).
 
 ## web
 
@@ -884,7 +884,7 @@ release with:
 
     $ dotnet tool update -g app
 
-For these reasons we've made `web` the primary way of developing Web Apps and converted all existing [Web App Templates](http://templates.servicestack.net/docs/web-apps#getting-started) and [Web App Demos](https://github.com/NetCoreWebApps) to use it.
+For these reasons we've made `web` the primary way of developing Web Apps and converted all existing [Web App Templates](https://sharpscript.net/docs/sharp-apps#getting-started) and [Web App Demos](https://github.com/sharp-apps) to use it.
 
 The experience of developing the dotnet `web` tool shows us how easily we can deliver value-added functionality that benefits all Web Apps. By contrast
 in normal .NET Applications any efforts like packaging your App in a Windows Desktop Application is bespoke to your Application whereas since all
@@ -924,7 +924,7 @@ As it's just copying the pre-built binaries from [WebWin](https://github.com/Ser
 The same `web` tool for developing Web Apps on Windows is also used for deploying and hosting them on Linux that sports new templates
 to make the process effortless. We'll walk through how [spirals.web-app.io](http://spirals.web-app.io) was deployed.
 
-If you haven't already [create a new deploy](http://templates.servicestack.net/docs/deploying-web-apps#setup-the-deploy-user-account) user account
+If you haven't already [create a new deploy](https://sharpscript.net/docs/deploying-sharp-apps#setup-the-deploy-user-account) user account
 then [set up SSH and copy over your SSH public key to your remote server](https://www.digitalocean.com/community/tutorials/how-to-set-up-ssh-keys--2).
 
 Then using a Unix command-line or [Windows Subsystem for Linux (WSL)](https://github.com/ServiceStack/redis-windows#option-1-install-redis-on-ubuntu-on-windows) ssh into your remote server:
@@ -1153,7 +1153,7 @@ using (var scope = JsConfig.BeginScope())
 
 For better conformity with JavaScript's behavior both `'single'` and `"double-quoted"` strings have been changed to adopt the same escaping 
 behavior as template literal '\`' quoted strings. You can use `′prime quotes′` to retain existing escaping behavior which is also what's
-used in [Special string argument syntax](http://templates.servicestack.net/docs/syntax#special-string-argument-syntax) where the previous 
+used in [Special string argument syntax](https://sharpscript.net/docs/syntax#special-string-argument-syntax) where the previous 
 escaping behavior is most useful:
 
 ```
